[package]
name = "lute"
version = "0.3.1"

autoexamples = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
atoi = "2.0.0"
bstr = { version = "1.10.0", default-features = false, features = ["std"] }
c-enum = "0.2.3"
clap = { version = "4.5.18", optional = true, features = ["derive"] }
fmtastic = "0.2.1"
gcd = { version = "2.3.0", optional = true }
itertools = "0.13.0"
lazy_static = { version = "1.5.0", optional = true }
lock_api = { version = "0.4.12", features = ["nightly"] }
modular-bitfield = "0.11.2"
num-traits = "0.2.19"
petgraph = "0.6.5"
primal = "0.3.3"
slab = "0.4.9"
smallvec = "2.0.0-alpha.6"
thiserror = "1.0.64"
tracing = "0.1.40"

# rand feature
rand = { version = "0.8.5", optional = true, features = ["nightly"] }

# coordgen/resvg features
coordgen = { version = "0.2.2", git = "https://github.com/matt-cornell/coordgen-rs", optional = true } # make it work on windows
resvg = { version = "0.43.0", optional = true, default-features = false, features = ["text"] }

# example features
tracing-flame = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

# REPL features
reedline-repl-rs = { git = "https://github.com/matt-cornell/reedline-repl-rs", optional = true, features = ["shlex"] }

# GUI features
bytemuck = { version = "1.18.0", optional = true, features = ["extern_crate_std"] }
eframe = { version = "0.29.1", optional = true }
egui_tracing = { version = "0.2.6", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.18"

[[example]]
name = "parse-smiles"
required-features = ["examples-feats"]

[[example]]
name = "arena-test"
required-features = ["examples-feats"]

[[example]]
name = "alcohols"
required-features = ["examples-feats"]

[[bin]]
name = "repl"
path = "src/bin/repl.rs"
required-features = ["repl-feats"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui-feats"]

[features]
default = ["coordgen", "rand", "resvg"]

coordgen = ["dep:coordgen"]
rand = ["dep:gcd", "dep:rand"]
resvg = ["dep:lazy_static", "dep:resvg"]

examples-feats = ["dep:clap", "dep:tracing-flame", "dep:tracing-subscriber"]
gui-feats = ["dep:bytemuck", "dep:eframe", "dep:egui_tracing", "dep:tracing-subscriber"]
repl-feats = ["dep:clap", "dep:reedline-repl-rs", "dep:tracing-subscriber"]
